overflow hero image fix

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -183,7 +183,7 @@ nav
         @media screen and (max-width: $phone)
           height: 25vh
           width: auto
-          transform: scale(2)
+          transform: scale(2) translateX(-1vw)
           transform-origin: center
   &.left
     flex-direction: row-reverse
